--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 /**************************
 UNIVERSAL
 ***************************/
+:root {
+  --primary-color: grey;
+  --secondary-color: white;
+}
 
 *{
   margin: 0;
@@ -22,7 +26,7 @@ nav div ul {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #3E492A;
+  background-color: var(--primary-color);
   margin: 0;
   padding: 0;
   box-shadow: 0px 5px 5px .5px;
@@ -40,7 +44,7 @@ nav div ul li {
 
 nav div ul li a {
   text-decoration: none;
-  color: #E4D6A7;
+  color: var(--secondary-color);
   line-height: 100px;
   width: 100%;
   margin: 0;
@@ -51,8 +55,9 @@ nav div ul li a {
 }
 
 .active {
-  background-color: #E4572E;
-  color: #E4D6A7;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  width: 105%;
 }
 
 .content {
@@ -105,7 +110,7 @@ CONTACT
 #contact-form {
   width: 350px;
   height: 600px;
-  background-color: green;
+  background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
